2. Трекер SQL [#1734 #543371]